Page product.html was finished by framework bootstrap. Added Only slider. All was adapted. Also Will be add local font (@font-face) to all pages later.

--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -3,12 +3,12 @@ a {
 }
 
 body {
-    font-family: Lato;
+    font-family: "Lato";
     @include font();
 }
 
 button {
-    font-family: Lato;
+    font-family: "Lato";
 }
 
 .container {
