--- a/scss/blocks/products/_meta-products.scss
+++ b/scss/blocks/products/_meta-products.scss
@@ -100,7 +100,7 @@
     }
 
     .meta-names-list__item::after {
-        content: url(../../../imgs/product-meta-arrow.svg);
+        content: url(../imgs/product-meta-arrow.svg);
         position: absolute;
         right: -20px;
     }
@@ -125,7 +125,7 @@
     }
 
     .meta-items__button:before {
-        content: url(../../../imgs/products-cart.svg);
+        content: url(../imgs/products-cart.svg);
         position: absolute;
         left: 40px;
         top: 10px;
