--- a/scss/blocks/products/_header-product.scss
+++ b/scss/blocks/products/_header-product.scss
@@ -33,7 +33,7 @@
         color: $darkpink-color;
     }
 
-    .active--pink {
+    .active-pink {
         color: $darkpink-color;
         font-weight: 600;
     }
