--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,3 +26,7 @@
 @import "./blocks/products/products-slider";
 @import "./blocks/products/products-list";
 @import "./blocks/products/meta-products";
+
+@import "./blocks/catalog/catalog-page-navigation";
+@import "./blocks/catalog/poduct-navigation-filter";
+@import "./blocks/catalog/dropdown-navigation";
