--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -11,7 +11,7 @@ button {
     font-family: "Lato";
 }
 
-.container {
+.container-main {
     width: 71%;
     margin: 0 auto;
 }
@@ -21,25 +21,43 @@ button {
 }
 
 @media (max-width: $max-tablet-width) {
-    .container {
+    .container-main {
         width: 90.7%;
     }
 }
 
 @media (max-width: $max-mobile-width) {
-    .container {
+    .container-main {
         width: 92%;
     }
 }
 
 @media only screen and (min-width: 767px) and (max-width: 1599px) {
     .container--tablet {
-        width: 97.5%;
+        width: 95%;
     }
 }
 
 @media (max-width: $max-mobile-width) {
     .container--mobile {
         width: 95%;
+    }
+}
+
+@media (max-width: $max-tablet-width) {
+    .container--tablet-catalog {
+        width: 98%;
+    }
+}
+
+@media only screen and (min-width: 1400px) and (max-width: 1599px) {
+    .container--tablet-index {
+        width: 79%;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1400px) {
+    .container--tablet-index {
+        width: 98%;
     }
 }
