--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -64,7 +64,7 @@
             }
         }
 
-        .subscribe__form-area {
+        .subscribe-form__area {
             height: 50px;
             width: 270px;
             box-sizing: border-box;
@@ -80,7 +80,7 @@
             }
         }
 
-        .subscribe__form-button {
+        .subscribe-form__button {
             width: 90px;
             height: 50px;
             border-radius: 0 50px 50px 0;
