--- a/scss/blocks/products/_products-list.scss
+++ b/scss/blocks/products/_products-list.scss
@@ -42,4 +42,30 @@
             display: none;
         }
     }
+
+    @media only screen and (max-width: 1200px) {
+        .products__item--tablet-none-man-catalog {
+            display: none;
+        }
+    }
+
+
+    .products__list-catalog-grid {
+        display: grid;
+        justify-items: center;
+        grid-template-columns: repeat(3, 1fr);
+
+        @include tablet {
+            margin-top: 0;
+        }
+
+        @media only screen and (min-width: 768px) and (max-width: 1200px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @include mobile {
+            grid-template-columns: repeat(1, 1fr);
+        }
+
+    }
 }
