fixed arrow.jpg on product page

--- a/scss/blocks/catalog/_dropdown-navigation.scss
+++ b/scss/blocks/catalog/_dropdown-navigation.scss
@@ -19,7 +19,7 @@
 }
 
 .dropdown-toggle::after {
-    content: url("../../../imgs/product-meta-arrow.svg");
+    content: url("C:/Users/Andrew/Desktop/ProfMarkup.Course/ProfMarkup.Lesson1/imgs/product-meta-arrow.jpg");
     border: none;
     margin-left: 5px;
     vertical-align: 1px;
