finish front-end on Vue

--- a/public/scss/blocks/products/_meta-products.scss
+++ b/public/scss/blocks/products/_meta-products.scss
@@ -144,7 +144,7 @@
 }
 
 .meta-names-list__item::after {
-    content: url(../imgs/product-meta-arrow.svg);
+    content: url(/imgs/product-meta-arrow.jpg);
     position: absolute;
     right: -20px;
 }
