--- a/public/css/style.css
+++ b/public/css/style.css
@@ -242,6 +242,11 @@ button {
   }
 }
 
+button {
+  cursor: pointer;
+  cursor: hand;
+}
+
 .header {
   background-color: #222222;
 }
@@ -1519,6 +1524,7 @@ button {
   border: 1px solid #A4A4A4;
   margin-right: 40px;
   text-transform: uppercase;
+  color: #575757;
   font-size: 14px;
   line-height: 17px;
   font-weight: 300;
@@ -1541,6 +1547,7 @@ button {
 .cart-list .cart-continue-button {
   width: 225px;
   height: 50px;
+  color: #575757;
   background-color: white;
   border: 1px solid #A4A4A4;
   text-transform: uppercase;
@@ -2082,7 +2089,7 @@ button {
 }
 
 .meta-names-list__item::after {
-  content: url(../imgs/product-meta-arrow.svg);
+  content: url(/imgs/product-meta-arrow.jpg);
   position: absolute;
   right: -20px;
 }
@@ -2325,5 +2332,62 @@ button {
 .dropdown-menu__label {
   padding-left: 5px;
   color: #6F6E6E;
+}
+
+.overlay {
+  background-color: #00000055;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  z-index: 11;
+}
+
+.attention-block {
+  background-color: white;
+  height: 100px;
+  width: 320px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: center;
+  box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+  padding: 40px;
+}
+
+.attention-block__text {
+  font-size: 15pt;
+  line-height: 17px;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.attention-block__wrap {
+  display: flex;
+  text-align: center;
+  justify-content: space-around;
+}
+
+.attention-block__wrap-button {
+  margin-top: 30px;
+  width: 225px;
+  height: 50px;
+  background-color: white;
+  border: 1px solid #A4A4A4;
+  text-transform: uppercase;
+}
+
+.button-pink {
+  background-color: #F16D7F;
+  color: white;
+  border: none;
+  margin-right: 30px;
+  border: 1px solid #F16D7F;
 }
 /*# sourceMappingURL=style.css.map */
