--- a/public/scss/blocks/cart/_cart-list.scss
+++ b/public/scss/blocks/cart/_cart-list.scss
@@ -159,6 +159,7 @@
         border: 1px solid $light-gray;
         margin-right: 40px;
         text-transform: uppercase;
+        color: #575757;
         @include font(14px, 17px, 300, normal);
 
         @include mobile {
@@ -173,6 +174,7 @@
     .cart-continue-button {
         width: 225px;
         height: 50px;
+        color: #575757;
         background-color: $clear-white-color;
         border: 1px solid $light-gray;
         text-transform: uppercase;
