--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -30,3 +30,5 @@
 @import "./blocks/catalog/catalog-page-navigation";
 @import "./blocks/catalog/poduct-navigation-filter";
 @import "./blocks/catalog/dropdown-navigation";
+
+@import "./blocks/meta-sub/attention"
